fixed orange tree

--- a/index.html
+++ b/index.html
@@ -52,11 +52,16 @@
         </div>
 
         <div class="clear" id="main">
+            <div id="welcome">Welcome!</div>
             <div id="tree-canvas">
                 <img id="tree-svg" src="imgs/tree.svg" height="400">
-                <div class="orange o-one"></div>
-                <div class="orange o-two"></div>
-                <div class="orange o-three"></div>
+                <div id="outer-orange-box">
+                    <div id="orange-box">
+                        <div class="orange o-one"></div>
+                        <div class="orange o-two"></div>
+                        <div class="orange o-three"></div>
+                    </div>
+                </div>
             </div>
         </div>
 
