--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Jarod Orange</title>
-        <link rel="icon" href="favicon.png">
+        <link rel="icon" href="./imgs/orange_loader.svg">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
             rel="stylesheet" 
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
@@ -12,26 +12,26 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-        <link href="src/index.css" rel="stylesheet">
+        <link href="./src/index.css" rel="stylesheet">
     </head>
     <body>
         <!-- Navbar -->
         <nav class="navbar sticky-top navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbar-nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="./index.html">Jarod Orange</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="./about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Projects</a>
+                            <a class="nav-link" href="./projects.html">Projects</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Resume</a>
@@ -40,32 +40,43 @@
                 </div>
             </div>
         </nav>
-
+        <!--
         <div id="loader">
             <div id="loading-canvas">
-                <img src="imgs/orange_loader.svg" height="400" alt="loading animation">
+                <img src="./imgs/orange_loader.svg" height="400" alt="loading animation">
                 <div class="drop d-one"></div>
                 <div class="drop d-two"></div>
                 <div class="drop d-three"></div>
                 <div id="loading">Loading...</div>
             </div>
         </div>
-
-        <div class="clear" id="main">
+    -->
+        <main id="main">
             <div id="welcome">Welcome!</div>
-            <div id="tree-canvas">
-                <img id="tree-svg" src="imgs/tree.svg" height="400">
-                <div id="outer-orange-box">
-                    <div id="orange-box">
-                        <div class="orange o-one"></div>
-                        <div class="orange o-two"></div>
-                        <div class="orange o-three"></div>
+            <div id="main-container">
+                <div id="sun-container">
+                    <img id="sun" src="./imgs/sun.svg" height="300">
+                </div>
+                <div id="game-scene">
+                    <div id="tree-container">
+                        <img id="tree-svg" src="./imgs/game_tree.svg">
+                        <div class="orange o-1"></div>
+                        <div class="orange o-2"></div>
+                        <div class="orange o-3"></div>
                     </div>
+                    <div id="game-canvas-container">
+                        <canvas id="game-canvas" width="1490" height="300">
+
+                        </canvas>
+                    </div>
+                    <div id="grass"></div>
                 </div>
             </div>
-        </div>
+        </main>
 
-
+        <footer>
+            <div id="footer-name">Jarod Najera 2023</div>
+        </footer>
         <script src="src/main.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" 
             integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" 
