added content for home page

--- a/about.html
+++ b/about.html
@@ -45,8 +45,8 @@
         <main id="about">
             <h1 id="about-title">About</h1>
             <div id="about-me">
-                <div id="photo">
-                    <img src="./imgs/jrd_grad.svg" height="200">
+                <div id="photo-container">
+                    <img id="photo" src="./imgs/jrd_grad.svg" height="200">
                 </div>
                 <div id="bio">
                     <p>Hi! My name is Jarod Najera, and I'm a full-stack web and mobile developer.</p>
@@ -62,7 +62,11 @@
         </main>
 
         <footer>
-            <div>Jarod Najera 2023</div>
+            <div id="footer-name">Jarod Najera 2023</div>
+            <div id="footer-links">
+                <a href="https://github.com/jarodnajera"><img src="./imgs/github-mark.svg" height="25"></a>
+                <a href="linkedin.com/in/jarod-najera-2272721b9"><img src="./imgs/linkedin.svg" height="25"></a>
+            </div>
         </footer>
         
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" 
