--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
         </nav>
-        <!--
+       
         <div id="loader">
             <div id="loading-canvas">
                 <img src="./imgs/orange_loader.svg" height="400" alt="loading animation">
@@ -50,8 +50,8 @@
                 <div id="loading">Loading...</div>
             </div>
         </div>
-    -->
-        <main id="main">
+  
+        <main id="main" class="clear">
             <div id="welcome">Welcome!</div>
             <div id="main-container">
                 <div id="sun-container">
@@ -65,9 +65,7 @@
                         <div class="orange o-3"></div>
                     </div>
                     <div id="game-canvas-container">
-                        <canvas id="game-canvas" width="1490" height="300">
-
-                        </canvas>
+                        <canvas id="game-canvas"></canvas>
                     </div>
                     <div id="grass"></div>
                 </div>
@@ -76,6 +74,10 @@
 
         <footer>
             <div id="footer-name">Jarod Najera 2023</div>
+            <div id="footer-links">
+                <a href="https://github.com/jarodnajera"><img src="./imgs/github-mark.svg" height="25"></a>
+                <a href="linkedin.com/in/jarod-najera-2272721b9"><img src="./imgs/linkedin.svg" height="25"></a>
+            </div>
         </footer>
         <script src="src/main.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" 
