--- a/projects.html
+++ b/projects.html
@@ -153,7 +153,11 @@
         </main>
 
         <footer>
-            <div>Jarod Najera 2023</div>
+          <div id="footer-name">Jarod Najera 2023</div>
+          <div id="footer-links">
+              <a href="https://github.com/jarodnajera"><img src="./imgs/github-mark.svg" height="25"></a>
+              <a href="linkedin.com/in/jarod-najera-2272721b9"><img src="./imgs/linkedin.svg" height="25"></a>
+          </div>
         </footer>
         
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" 
