made changes for mobile

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">Jarod Orange</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
+                  <span class="navbar-toggler-icon">
+                    <img id="hamburger" src="./imgs/list.svg">
+                  </span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
@@ -43,7 +45,7 @@
        
         <div id="loader">
             <div id="loading-canvas">
-                <img src="./imgs/orange_loader.svg" height="400" alt="loading animation">
+                <img id="loader-svg" src="./imgs/orange_loader.svg" alt="loading animation">
                 <div class="drop d-one"></div>
                 <div class="drop d-two"></div>
                 <div class="drop d-three"></div>
@@ -55,7 +57,7 @@
             <div id="welcome">Welcome!</div>
             <div id="main-container">
                 <div id="sun-container">
-                    <img id="sun" src="./imgs/sun.svg" height="300">
+                    <img id="sun" src="./imgs/sun.svg">
                 </div>
                 <div id="game-scene">
                     <div id="tree-container">
