--- a/about.html
+++ b/about.html
@@ -21,7 +21,9 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">Jarod Orange</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon">
+                        <img id="hamburger" src="./imgs/list.svg">
+                    </span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
