added tunefi to projects

--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
                             <a class="nav-link active" href="./projects.html">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Resume</a>
+                            <a class="nav-link" href="./resume/Jarod%20Najera%20Resume%20io%202023.pdf">Resume</a>
                         </li>
                     </ul>
                 </div>
@@ -69,6 +69,33 @@
                                     name with a picture of it, and if it's edible or not. If you have a sick house plant, you can diagnose plant illnesses with it as well.
                                 </p>
                             </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingFive">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                          TuneFi
+                        </button>
+                      </h2>
+                      <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive">
+                        <div class="accordion-body">
+                          <div class="project-container">
+                              <div class="tools-git">
+                                  <div class="tools">React, React-Router, Express, MongoDB</div>
+                                  <a href="https://github.com/jarodnajera/TuneFi"><img src="./imgs/github-mark.svg" height="25"></a>
+                              </div>
+                              <br>
+                              <div class="project-description">
+                                  <p>
+                                      Web application that allows that allows users to create pages for 
+                                      uploading their music, creating event posts for their concerts or 
+                                      meet ups, and communicating with their fans. Users are also able to 
+                                      follow and keep up with their favorite artists. Implemented 2FA and 
+                                      password hashing for authentication
+                                  </p>
+                              </div>
                           </div>
                         </div>
                       </div>
