--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="./projects.html">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./resume/Jarod%20Najera%20Resume%20io.pdf">Resume</a>
+                            <a class="nav-link" href="./resume/Jarod%20Najera%20Resume%20io%202023.pdf">Resume</a>
                         </li>
                     </ul>
                 </div>
