--- a/projects.html
+++ b/projects.html
@@ -69,6 +69,60 @@
                                     name with a picture of it, and if it's edible or not. If you have a sick house plant, you can diagnose plant illnesses with it as well.
                                 </p>
                             </div>
+                            <hr>
+                            <div class="gallery-container">
+                              <div class="gallery-title">Gallery</div>
+                              <div class="gallery">
+                                <div id="pb-carousel" class="carousel slide" data-bs-ride="carousel">
+                                  <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                      <img src="./imgs/pocket_botanist/1.png" class="d-block w-50" alt="pocket botanist img 1">
+                                    </div>
+                                    <div class="carousel-item">
+                                      <img src="./imgs/pocket_botanist/2.png" class="d-block w-50" alt="pocket botanist img 2">
+                                    </div>
+                                    <div class="carousel-item">
+                                      <img src="./imgs/pocket_botanist/3.png" class="d-block w-50" alt="pocket botanist img 3">
+                                    </div>
+                                    <div class="carousel-item">
+                                      <img src="./imgs/pocket_botanist/4.png" class="d-block w-50" alt="pocket botanist img 4">
+                                    </div>
+                                    <div class="carousel-item">
+                                      <img src="./imgs/pocket_botanist/5.png" class="d-block w-50" alt="pocket botanist img 5">
+                                    </div>
+                                    <div class="carousel-item">
+                                      <img src="./imgs/pocket_botanist/6.png" class="d-block w-50" alt="pocket botanist img 6">
+                                    </div>
+                                    <div class="carousel-item">
+                                      <img src="./imgs/pocket_botanist/7.png" class="d-block w-50" alt="pocket botanist img 7">
+                                    </div>
+                                    <div class="carousel-item">
+                                      <img src="./imgs/pocket_botanist/8.png" class="d-block w-50" alt="pocket botanist img 8">
+                                    </div>
+                                    <div class="carousel-item">
+                                      <img src="./imgs/pocket_botanist/9.png" class="d-block w-50" alt="pocket botanist img 9">
+                                    </div>
+                                    <div class="carousel-item">
+                                      <img src="./imgs/pocket_botanist/10.png" class="d-block w-50" alt="pocket botanist img 10">
+                                    </div>
+                                    <div class="carousel-item">
+                                      <img src="./imgs/pocket_botanist/11.png" class="d-block w-50" alt="pocket botanist img 11">
+                                    </div>
+                                    <div class="carousel-item">
+                                      <img src="./imgs/pocket_botanist/12.png" class="d-block w-50" alt="pocket botanist img 12">
+                                    </div>
+                                  </div>
+                                  <button class="carousel-control-prev" type="button" data-bs-target="#pb-carousel" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                  </button>
+                                  <button class="carousel-control-next" type="button" data-bs-target="#pb-carousel" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                  </button>
+                                </div>
+                              </div>
+                            </div>
                           </div>
                         </div>
                       </div>
