added lazy loading for about me

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
             <h1 id="about-title">About</h1>
             <div id="about-me">
                 <div id="photo-container">
-                    <img id="photo" src="./imgs/jrd_grad.svg" height="200">
+                    <img id="photo" src="./imgs/jrd_grad.svg" height="200" loading="lazy">
                 </div>
                 <div id="bio">
                     <p>Hi! My name is Jarod Najera, and I'm a full-stack web and mobile developer.</p>
