--- a/projects.html
+++ b/projects.html
@@ -137,13 +137,13 @@
                         <div class="accordion-body">
                           <div class="project-container">
                               <div class="tools-git">
-                                  <div class="tools">React, React-Router, Express, MongoDB</div>
+                                  <div class="tools">React, React-Router, Express.js, MongoDB</div>
                                   <a href="https://github.com/jarodnajera/TuneFi"><img src="./imgs/github-mark.svg" height="25"></a>
                               </div>
                               <br>
                               <div class="project-description">
                                   <p>
-                                      Web application that allows that allows users to create pages for 
+                                      Web application that allows users to create pages for 
                                       uploading their music, creating event posts for their concerts or 
                                       meet ups, and communicating with their fans. Users are also able to 
                                       follow and keep up with their favorite artists. Implemented 2FA and 
